WanaLyzer/out/numpy/typing/tests/data/pass/multiarray.pyi
import numpy as np
import numpy.typing as npt
from _typeshed import Incomplete

AR_f8: npt.NDArray[np.float64]
AR_i4: Incomplete
AR_u1: Incomplete
AR_LIKE_f: Incomplete
AR_LIKE_i: Incomplete
b_f8: Incomplete
b_i4_f8_f8: Incomplete
