WanaLyzer/out/numpy/typing/tests/data/fail/false_positives.pyi
import numpy as np
import numpy.typing as npt

AR_f8: npt.NDArray[np.float64]
